# dlopen-experimentation

./: CMakeLists.txt  README.md
case_1/: hello.cpp  hello.h  main.cpp
case_2/: hello2.cpp  hello2.h  helloInterface.h  main_dlopen_class.cpp
case_2_bis/: main_2_bis.cpp  polygon.hpp  triangle.cpp  triangle.h
case_3/: hello3.cpp  hello3.h  helloInterface3.h  helloTampon.cpp  helloTampon.h  main_dlopen_class3.cpp
case_4/: hello4.cpp  hello4.h  helloTampon4.cpp  helloTampon4.h  main_dlopen_class4.cpp
